# SMPL-Playground

./: README.md  pyproject.toml
src/: components.py  constants.py  light.py  main.py  model.py  utils.py
src/components/: __init__.py
src/components/gui/: __init__.py  interfaces.py  widgets.py
src/components/scene/: __init__.py  light.py  model.py
src/controllers/: __init__.py  lights.py  model.py
src/gui/: components.py  controls.py  panels.py
