[project]
name = "smpl-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "open3d==0.19.0",
    "smplx==0.1.28",
    "torch==2.2.2",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
]

[tool.isort]
profile = "black"